--- a/css/contact.css
+++ b/css/contact.css
@@ -8,7 +8,7 @@ body {
   font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 0;
-  background-image: url('contact.jpg');
+  background-image: url('zahra.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
